--- a/src/app/shared/components/buttons/simple-settings-button/simple-settings-button.component.html
+++ b/src/app/shared/components/buttons/simple-settings-button/simple-settings-button.component.html
@@ -1,1 +1,9 @@
-<button (click)="submit()">{{ content }}</button>
+<button
+  [ngStyle]="{
+    width: width ? width + 'px' : null,
+    height: height ? height + 'px' : null
+  }"
+  (click)="submit()"
+>
+  {{ content }}
+</button>
