--- a/src/app/shared/components/buttons/simple-settings-button/simple-settings-button.component.scss
+++ b/src/app/shared/components/buttons/simple-settings-button/simple-settings-button.component.scss
@@ -2,15 +2,31 @@
 
 button {
   font-size: 14px;
-  color: rgb(251, 251, 251);
-  background-color: $interface-accent-2;
   border-radius: 4px;
   border: unset;
   padding: 4.5px 16px;
   cursor: pointer;
-  transition: background-color 250ms ease-in-out;
+  transition: all 250ms ease-in-out;
+}
+
+.primary {
+  color: rgb(251, 251, 251);
+  background-color: $interface-accent-2;
+  border: 1px solid $interface-accent-2;
 
   &:hover {
     background-color: rgb(214, 44, 124);
+    border: 1px solid rgb(214, 44, 124);
+  }
+}
+
+.secondary {
+  border: 1px solid $interface-accent-2;
+  color: $interface-accent-2;
+  background-color: $settings-background-light;
+
+  &:hover {
+    color: rgb(251, 251, 251);
+    background-color: $interface-accent-2;
   }
 }
