--- a/src/app/settings/components/settings-themes/settings-themes.component.html
+++ b/src/app/settings/components/settings-themes/settings-themes.component.html
@@ -17,6 +17,8 @@
       </mat-form-field>
       <app-simple-settings-button
         [content]="'Choose this Theme'"
+        [fontWeight]="500"
+        [height]="48"
         (submitEvent)="chooseTheme()"
       ></app-simple-settings-button>
     </div>
