--- a/src/app/shared/components/buttons/simple-settings-button/simple-settings-button.component.html
+++ b/src/app/shared/components/buttons/simple-settings-button/simple-settings-button.component.html
@@ -1,7 +1,8 @@
 <button
   [ngStyle]="{
     width: width ? width + 'px' : null,
-    height: height ? height + 'px' : null
+    height: height ? height + 'px' : null,
+    'font-weight': fontWeight ? fontWeight : null
   }"
   [ngClass]="{ primary: style === 'primary', secondary: style === 'secondary' }"
   (click)="submit()"
