--- a/src/app/shared/components/header/header.component.html
+++ b/src/app/shared/components/header/header.component.html
@@ -1,8 +1,12 @@
 <header>
-  <img src="" alt="LOGO" />
-  <img
-    (click)="openSettings()"
-    src="assets/img/icons/settings-menu.svg"
-    alt="settings-img"
-  />
+  <img src="assets/img/icons/logo.svg" alt="LOGO" />
+  <div class="right-wrapper">
+    <img (click)="openUserMenue()" src="assets/img/icons/user.svg" alt="user" />
+
+    <img
+      (click)="openSettings()"
+      src="assets/img/icons/settings-menu.svg"
+      alt="settings-img"
+    />
+  </div>
 </header>
