--- a/src/app/shared/components/header/header.component.scss
+++ b/src/app/shared/components/header/header.component.scss
@@ -5,6 +5,11 @@ header {
   padding: 16px;
   position: relative;
   z-index: 1;
+}
+
+.right-wrapper {
+  display: flex;
+  gap: 24px;
 
   img {
     cursor: pointer;
