--- a/src/app/shared/components/footer/footer.component.html
+++ b/src/app/shared/components/footer/footer.component.html
@@ -88,7 +88,7 @@
       </svg>
     </div>
 
-    <div class="footer-item">
+    <div class="footer-item pointer">
       <span>Contact</span>
 
       <svg
@@ -120,7 +120,7 @@
       </svg>
     </div>
 
-    <div class="footer-item">
+    <div class="footer-item pointer">
       <span>Buy Us A Coffee</span>
 
       <svg
@@ -160,14 +160,12 @@
       <span>&copy; 2024 FLOWSEQ. All rights reserved.</span>
     </div>
 
-    <div class="footer-item">
+    <div class="footer-item pointer">
       <span>Privacy Policy</span>
     </div>
 
-    <div class="footer-item">
+    <div class="footer-item pointer">
       <span>Terms & Conditions</span>
     </div>
   </div>
-  <!-- <a [routerLink]="'/privacy-policy'" target="_blank">privacy policy</a>
-  <a [routerLink]="'/imprint'" target="_blank">Imprint</a> -->
 </footer>
