--- a/src/app/shared/components/header/header.component.html
+++ b/src/app/shared/components/header/header.component.html
@@ -46,8 +46,33 @@
   </svg>
 
   <div class="right-wrapper">
+    @if (focusModeOnIcon) {
     <svg
-      (click)="settingsService.toggleFocusMode()"
+      class="focus-mode-icon"
+      (click)="toggleFocusMode()"
+      [ngClass]="{ 'fade-out': switching, 'fade-in-20': fadeInFinished }"
+      opacity="0"
+      width="33"
+      height="33"
+      viewBox="0 0 33 33"
+      fill="none"
+      xmlns="http://www.w3.org/2000/svg"
+    >
+      <path
+        d="M26.8125 22L23.4094 17.3305M16.5 24.0625V19.25M6.1875 22L9.58237 17.3415M4.125 11C9.075 22 23.925 22 28.875 11"
+        stroke="#E7E7E7"
+        stroke-width="2"
+        stroke-linecap="round"
+        stroke-linejoin="round"
+      />
+    </svg>
+    } @else {
+
+    <svg
+      class="focus-mode-icon"
+      [ngClass]="{ 'fade-out': switching, 'fade-in-100': fadeInFinished }"
+      (click)="toggleFocusMode()"
+      opacity="0"
       width="27"
       height="17"
       viewBox="0 0 27 17"
@@ -70,6 +95,7 @@
         stroke-linejoin="round"
       />
     </svg>
+    }
 
     <svg
       (click)="openUserMenu()"
