first test of google calendar API

--- a/src/app/home/components/home/home.component.html
+++ b/src/app/home/components/home/home.component.html
@@ -5,6 +5,10 @@
   "
 >
   <app-header></app-header>
+  <button class="test-button" (click)="calendarService.testGetEvents()">
+    TEST Google
+  </button>
+
   <main>
     <div
       [ngStyle]="{
