--- a/src/app/home/components/home/home.component.scss
+++ b/src/app/home/components/home/home.component.scss
@@ -56,3 +56,9 @@ main {
   background-color: red;
   cursor: pointer;
 }
+
+.test-button {
+  position: absolute;
+  top: 100px;
+  right: 100px;
+}
