display users first name as welcome msg

--- a/src/app/home/components/welcome/welcome.component.html
+++ b/src/app/home/components/welcome/welcome.component.html
@@ -1,6 +1,7 @@
 <section>
   <div class="welcome-wrapper">
-    <h1>Hallo Katrin,</h1>
+    <h1>Hallo{{ displayName }},</h1>
+
     <span>was möchtest du heute machen?</span>
   </div>
 
