mat slider for sound volume

--- a/src/app/home/components/welcome/welcome.component.html
+++ b/src/app/home/components/welcome/welcome.component.html
@@ -7,6 +7,8 @@
 
   <div class="buttons-wrapper">
     <app-glass-button
+      matTooltip="The Standard Flow Sequence is a preset timer based on the well-known Pomodoro technique. It helps you stay productive by guiding you through 25-minute work sessions (Flows) followed by short 5-minute breaks. After completing four Flows, you’ll enjoy a longer break to maintain focus and avoid burnout."
+      [matTooltipPosition]="'above'"
       [btnAction]="'Start'"
       [btnName]="'Standard'"
       [btnType]="'Flow Sequence'"
@@ -15,6 +17,8 @@
 
     <app-glass-button
       [btnAction]="'Start'"
+      matTooltip="The Reverse Flow Sequence offers an alternative approach that helps you jump into work with renewed energy. After a relaxing 25-minute break, you focus on just 5 minutes of work to boost productivity. This method is great for tackling tasks when you need a little extra motivation to get started."
+      [matTooltipPosition]="'above'"
       [btnName]="'Reverse'"
       [btnType]="'Flow Sequence'"
       (buttonClicked)="startReverseSequence()"
