sound volume in App-Settings / change volume

--- a/src/app/settings/components/settings-sound/settings-sound.component.html
+++ b/src/app/settings/components/settings-sound/settings-sound.component.html
@@ -7,7 +7,7 @@
   <mat-slider>
     <input
       matSliderThumb
-      [(ngModel)]="value"
+      [(ngModel)]="volumeLevel"
       (change)="changeVolume()"
       #slider
     />
