deactivated buy me a coffee tab in settings / settings min width

--- a/src/app/settings/components/settings-base/settings-base.component.html
+++ b/src/app/settings/components/settings-base/settings-base.component.html
@@ -142,7 +142,7 @@
       <span>Sounds</span>
     </div>
 
-    <div
+    <!-- <div
       (click)="settingsService.activeTab = 'coffee'"
       [ngClass]="{ active: settingsService.activeTab === 'coffee' }"
     >
@@ -174,7 +174,7 @@
         </defs>
       </svg>
       <span>Buy Me A Coffee</span>
-    </div>
+    </div> -->
   </nav>
   <div class="content-wrapper">
     @if (settingsService.activeTab === 'general') {
